// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"  !!set #comment1\\n\\n&anchor    #comment2   \\n- 123  \\n- 45 1`] = `
sequence (4:1 ~ 5:6)
1 | ··!!set·#comment1¶
2 | ¶
3 | &anchor····#comment2···¶
4 | -·123··¶
  | ^^^^^^^^
5 | -·456··¶
  | ^^^^^
<sequence>
  <handleTag handle="!!" suffix="set" />
  <anchor value="anchor" />
  <middleComment value="comment1">
  <middleComment value="comment2   ">
  <sequenceItem>
    <plain value="123" />
  </sequenceItem>
  <sequenceItem>
    <plain value="456" />
  </sequenceItem>
</sequence>
`;

exports[`"  !!set #comment1\\n\\n&anchor    #comment2   \\n- 123  \\n- 45 2`] = `
comment (1:9 ~ 1:18)
1 | ··!!set·#comment1¶
  |         ^^^^^^^^^
2 | ¶
3 | &anchor····#comment2···¶
4 | -·123··¶
5 | -·456··¶
<comment value="comment1" />
`;

exports[`"  !!set #comment1\\n\\n&anchor    #comment2   \\n- 123  \\n- 45 3`] = `
comment (3:12 ~ 3:24)
1 | ··!!set·#comment1¶
2 | ¶
3 | &anchor····#comment2···¶
  |            ^^^^^^^^^^^^
4 | -·123··¶
5 | -·456··¶
<comment value="comment2   " />
`;

exports[`"-   " 1`] = `
sequence (1:1 ~ 1:2)
1 | -···¶
  | ^
<sequence>
  <sequenceItem>
    <null />
  </sequenceItem>
</sequence>
`;

exports[`"-   " 2`] = `
sequenceItem (1:1 ~ 1:2)
1 | -···¶
  | ^
<sequenceItem>
  <null />
</sequenceItem>
`;

exports[`"- 123  " 1`] = `
sequence (1:1 ~ 1:6)
1 | -·123··¶
  | ^^^^^
<sequence>
  <sequenceItem>
    <plain value="123" />
  </sequenceItem>
</sequence>
`;

exports[`"- 123  " 2`] = `
sequenceItem (1:1 ~ 1:6)
1 | -·123··¶
  | ^^^^^
<sequenceItem>
  <plain value="123" />
</sequenceItem>
`;

exports[`"- 123  \\n- 456  " 1`] = `
sequence (1:1 ~ 2:6)
1 | -·123··¶
  | ^^^^^^^^
2 | -·456··¶
  | ^^^^^
<sequence>
  <sequenceItem>
    <plain value="123" />
  </sequenceItem>
  <sequenceItem>
    <plain value="456" />
  </sequenceItem>
</sequence>
`;

exports[`"- 123  \\n- 456  " 2`] = `
sequenceItem (1:1 ~ 1:6)
1 | -·123··¶
  | ^^^^^
2 | -·456··¶
<sequenceItem>
  <plain value="123" />
</sequenceItem>
`;

exports[`"- 123  \\n- 456  " 3`] = `
sequenceItem (2:1 ~ 2:6)
1 | -·123··¶
2 | -·456··¶
  | ^^^^^
<sequenceItem>
  <plain value="456" />
</sequenceItem>
`;
